<resources>
    <string name="action_share">Share</string>
    <string name="add_bike_rack">Add bike rack</string>
    <string name="add_rack">Add a bike rack</string>
    <string name="add_rack_error">Error adding bike rack</string>
    <string name="app_name">BikeParking</string>
    <string name="confirm">Confirm</string>
    <string name="description_error">Description not found</string>
    <string name="drop_pin_auto_latlong">Drop a pin on the map to automatically input latitude and longitude.</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="google_play_cannot_connect">Cannot connect to Google Play services</string>
    <string name="google_play_not_installed">Google Play Services is not installed for this device</string>
    <string name="image_capture">Take photo</string>
    <string name="image_not_uploaded_error">Please upload an image first.</string>
    <string name="insert_photo">Upload photo</string>
    <string name="latitude">Latitude</string>
    <string name="location_text">near Location</string>
    <string name="longitude">Longitude</string>
    <string name="new_note">Add notes about this bike rack</string>
    <string name="notes">Notes</string>
    <string name="rack_button">Create Bike Rack</string>
    <string name="rack_name">Bike Rack</string>
    <string name="select_photo_error">Failed to upload photo</string>
    <string name="select_photo_versionerror">This action requires a newer version of Android. Please use the camera instead.</string>
    <string name="selected_image">selected image</string>
    <string name="success_add_rack">Successfully added bike rack</string>
    <string name="success_upload_photo">Successfully uploaded photo</string>
    <string name="take_photo_error">Failed to take photo</string>
    <string name="title_activity_maps">Bike Racks</string>
    <string name="use_camera">Camera</string>
    <string name="use_gallery">Gallery</string>
    <string name="name_bike_rack">Name of bike rack</string>
    <string name="share_action_text">Here is the closest bike rack to you: </string>>
</resources>
